# ai-news-daily-digest

./: .env  .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  SKILL.md  alerter.py  config.py  dry_run.py  fetcher.py  full_dry_run.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  review_samples.py  send_to_chat.py  storage.py  summarizer.py  telegram_bot.py  test_config.py  test_fetcher.py  test_link_format.py  test_ranking.py  test_storage.py  test_summarizer.py  test_telegram_bot.py  test_trends.py  test_weekly.py  trends.py  weekly.py
.github/workflows/: ci.yml
ai_news_digest/: __init__.py  app.py  pipeline.py
ai_news_digest/analysis/: __init__.py  clustering.py  entities.py  health.py  ranking.py  relevance.py  semantic_clustering.py  trends.py  weekly.py
ai_news_digest/config/: __init__.py  catalog.py  feeds.py  keywords.py  settings.py  topics.py  trust.py  validate.py  yaml_loader.py
config/: default.yaml  dev.yaml  prod.yaml
docs/: code-review-2026-04-29.md  follow-builders-v2-integration.md  formatting-rules.md
examples/: sample-daily-digest.md  sample-weekly-highlights.md
generated_samples/: daily-sample-with-weekly-preview.txt  weekly-sample.txt
scripts/: daily.py  dry_run.py  generate_samples.py  preview.py  weekly.py
src/: rss_news_briefing.py
tests/: test_circuit_breaker.py  test_config.py  test_edge_cases.py  test_entities.py  test_fetcher.py  test_formatter.py  test_integration.py  test_main.py  test_semantic_clustering.py  test_storage.py  test_summarizer.py  test_telegram_bot.py  test_weekly.py
(+36 files in other folders)
